<resources>
    <string name="app_name">PlaceFinder</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello Home Fragment.....</string>
    <string name="hello_login_fragment">Login page....</string>
    <string name="ed_username">Username or email</string>
    <string name="ed_password">Password</string>
    <string name="button_login">Login</string>
    <string name="tv_sign_up">Sign up?</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="text_email">Email</string>
    <string name="tv_string_add_business_header">Add your business details for FREE</string>
    <string name="business_name">Business name</string>
    <string name="contact_person">Contact person</string>
    <string name="contact_phone">Primary mobile number</string>
    <string name="button_add_business">Add business</string>
    <string name="street_name">Street</string>
    <string name="building_name">Building name</string>
    <string name="title_activity_profile_page">ProfilePageActivity</string>

    <string name="biz_industry">Choose industry</string>
    <string name="account_details">Account details</string>
    <string-array name="biz">
        <item>Computer industry</item>
        <item>Agriculture</item>
        <item>Pharmaceutical</item>
        <item>Construction</item>
        <item>Entertainment</item>
        <item>Food industry</item>
        <item>Health care industry</item>
        <item>Electronics industry</item>
        <item>Hospitality</item>
        <item>Telecommunications</item>
        <item>Service industry</item>
        <item>Others</item>
    </string-array>


</resources>
