<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddBusinessActivity">

    <TextView
        android:id="@+id/tv_string_add_business_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:paddingTop="15dp"
        android:text="@string/tv_string_add_business_header"
        android:textSize="18sp"
        android:textStyle="bold" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/ed_business_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_string_add_business_header"
        app:errorEnabled="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/business_name"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="2dp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/sp_industry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ed_business_name"
                app:errorEnabled="true">

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="2dp"
            android:entries="@array/biz"
            android:prompt="@string/biz_industry">

        </Spinner>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/ed_street"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sp_industry"
        app:errorEnabled="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/street_name"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="2dp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/ed_contact_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ed_street"
        app:errorEnabled="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contact_phone"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="2dp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/ed_building_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ed_contact_phone"
        app:errorEnabled="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/building_name"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="2dp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/ed_contact_person"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ed_building_name"
        app:errorEnabled="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contact_person"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="2dp" />

    </android.support.design.widget.TextInputLayout>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Priority"
        android:inputType="number"
        android:layout_below="@+id/ed_contact_person"/>

    <Button
        android:id="@+id/buttonAddBusiness"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_below="@+id/ed_contact_person"
        android:layout_centerHorizontal="true"
        android:text="@string/button_add_business"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"/>

</RelativeLayout>