<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
      android:weightSum="10">


    <android.support.v7.widget.CardView
        android:layout_width="368dp"
        android:layout_height="484dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp">
            <TextView
                android:text="@string/account_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:id="@+id/tc_header_acc"
                android:paddingBottom="10dp"
                android:paddingTop="15dp"/>
            <TextView
                android:id="@+id/tv_business_name_ac"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textStyle="bold"
                android:text="@string/business_name"
                android:layout_below="@+id/tc_header_acc"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"/>
            <TextView
                android:id="@+id/tv_contact_phone_ac"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_phone"
                android:textStyle="italic"
                android:layout_below="@+id/tv_business_name_ac"
                android:paddingLeft="10dp"/>
            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Spinner"
                android:id="@+id/spinner"
                android:layout_below="@+id/tv_contact_phone_ac"
                android:paddingLeft="10dp"
                android:entries="@array/biz"
                android:prompt="@array/biz"/>

            <TableRow
                android:layout_alignParentRight="true"
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/spinner">

                <Button
                    android:id="@+id/editButton"
                    android:layout_width="38dp"
                    android:layout_height="38dp"
                    android:layout_marginRight="15dp"
                    android:background="@android:drawable/ic_menu_edit"/>
                <Button
                    android:id="@+id/deleteButton"
                    android:layout_width="38dp"
                    android:layout_height="38dp"
                    android:background="@android:drawable/ic_menu_delete"/>

            </TableRow>



        </RelativeLayout>
    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>